MA-521: fix issues with searching subfields and mapping/memeber search queries for blank